<resources>
    <string name="app_name">Cadastro</string>
    <string name="phone">Telefone</string>
    <string name="name">Nome Completo</string>
    <string name="email">Email</string>
    <string name="joinEmailListText">Ingressar na Lista de e-mails?</string>
    <string name="sexTxt">Sexo</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="city">Cidade</string>
    <string name="save">Salvar</string>
    <string name="clear">Limpar</string>
    <string name="UF">UF</string>
    <string name="register">Cadastro</string>
</resources>